--- a/rust/coh2parse/Cargo.toml
+++ b/rust/coh2parse/Cargo.toml
@@ -2,3 +2,7 @@
 name = "coh2parse"
 version = "0.1.0"
 authors = ["ryantaylor <ryan.taylor9@gmail.com>"]
+
+[dependencies]
+log = "0.3"
+log4rs = "0.3"
