--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "vault"
-version = "0.1.1"
+version = "0.1.2"
 authors = ["Ryan Taylor <ryan@ryantaylordev.ca>"]
 
-description = "A parser for Company of Heroes 2 replay files."
+description = "A parser for Company of Heroes 2 replay files. Valid for replays generated on versions 19545 thru 19654."
 homepage = "http://ryantaylordev.ca"
 repository = "https://github.com/ryantaylor/vault"
 readme = "README.md"
