Moved FFI functionality into a library feature, and updated Cargo.toml accordingly. Also made all mods private and only exported what should be public.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,13 @@ license = "MIT"
 crate-type = ["dylib", "rlib"]
 
 [dependencies]
-libc = "0.1"
 log = "0.3"
 rustc-serialize = "0.3"
 zip = "0.1"
+
+[dependencies.libc]
+version = "0.1"
+optional = true
+
+[features]
+ffi = ["libc"]
