--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ addons:
     - libelf-dev
     - libdw-dev
 after_success:
-- travis-cargo doc-upload --branch unstable
+- travis-cargo --only stable doc-upload --branch unstable
 - travis-cargo coveralls --no-sudo
 notifications:
   email:
