--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ keywords = ["coh", "coh2", "company", "heroes", "replay"]
 license = "MIT"
 
 [lib]
+name = "vault"
 crate-type = ["dylib", "rlib"]
 
 [dependencies]
