--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
 - |
   travis-cargo build &&
   travis-cargo test &&
-  travis-cargo --only stable doc
+  travis-cargo doc
 addons:
   apt:
     packages:
