--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ before_script:
 script:
 - |
   travis-cargo build &&
-  travis-cargo test &&
-  travis-cargo --only stable doc
+  travis-cargo test
+#  travis-cargo --only stable doc
 addons:
   apt:
     packages:
@@ -23,7 +23,8 @@ addons:
     - libelf-dev
     - libdw-dev
 after_success:
-- travis-cargo doc-upload
+#- travis-cargo doc-upload
+- curl https://raw.githubusercontent.com/ryantaylor/vault/master/build-doc.sh | sh 
 - travis-cargo coveralls --no-sudo
 notifications:
   email:
