--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,10 @@ addons:
     - libdw-dev
 after_success:
 #- travis-cargo doc-upload
+#- git config --global user.email "ryan.taylor9@gmail.com"
+#- git config --global user.name "Travis-CI"
+#- git config credential.helper "store --file=.git/credentials"
+#- echo "https://${GH_TOKEN}:@github.com" > .git/credentials
 - 'curl https://raw.githubusercontent.com/ryantaylor/vault/master/build-doc.sh | sh'
 - travis-cargo coveralls --no-sudo
 notifications:
