Added replays to cargo exclusion list.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 keywords = ["coh", "coh2", "company", "heroes", "replay"]
 license = "MIT"
 
+exclude = ["replays/*"]
+
 [lib]
 name = "vault"
 crate-type = ["dylib", "rlib"]
