--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ crate-type = ["dylib", "rlib"]
 [dependencies]
 log = "0.3"
 rustc-serialize = "0.3"
-zip = "0.1"
+
 
 [dependencies.clippy]
 version = "*"
@@ -29,6 +29,12 @@ optional = true
 version = "0.2"
 optional = true
 
+[dependencies.zip]
+version = "0.1"
+optional = true
+
 [features]
 ffi = ["libc"]
 dev = ["clippy"]
+parse-archive = ["zip"]
+parse-all = ["parse-archive"]
