--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,8 @@ crate-type = ["dylib", "rlib"]
 [dependencies]
 log = "0.3"
 rustc-serialize = "0.3"
+nom = "^4.0"
+byteorder = "1"
 
 [dependencies.clippy]
 version = "^0.0"
