--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ crate-type = ["dylib", "rlib"]
 
 [dependencies]
 byteorder = "1"
+magnus = { version = "0.5", optional = true }
 nom = "7"
 nom_locate = "4"
 nom-tracable = "0.9.0"
