--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ magnus = { version = "0.5", optional = true }
 nom = "7"
 nom_locate = "4"
 nom-tracable = "0.9.0"
+serde = { version = "1.0", features = ["derive"], optional = true }
 
 [features]
 trace = ["nom-tracable/trace"]
