--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,8 @@ nom = "7"
 nom_locate = "4"
 nom-tracable = "0.9"
 serde = { version = "1.0", features = ["derive"], optional = true }
-uuid = { version = "1", features = ["serde"] }
+uuid = "1"
 
 [features]
+serde = ["dep:serde", "uuid/serde"]
 trace = ["nom-tracable/trace"]
