--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ serde = { version = "1.0", features = ["derive"], optional = true }
 uuid = "1"
 
 [features]
+raw = []
 regression = []
 serde = ["dep:serde", "uuid/serde"]
 trace = ["nom-tracable/trace"]
